--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,14 @@
     margin: auto;
 }
 
+#banner {
+    height: 30%;
+    width: auto;
+    background-color: lightgrey;
+    padding: 5px;
+    margin-right: 5px;
+}
+
 /* Customizing CSS for PivotTable */
 .pvtAxisContainer li span.pvtAttr {
     height: auto;
