--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@
 	padding: 5px;
 }
 
+#goback {
+	width: auto;
+	padding: 5px;
+	background-color: #6495ED;
+}
+
 .no-close .ui-dialog-titlebar-close {
   display: none;
 }
